<resources>
    <string name="app_name">Caseidilla</string>

    <string name="authorization">Welcome to Caseidilla.\nWe are happy to see you!</string>
    <string name="register">Create account</string>
    <string name="register_butt">Ready</string>
    <string name="register_welcome">Please, enter your data\nto become The Part of our precious community!</string>
    <string name="sign_in">Sign in</string>

    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="ok">Ready for an adventure?</string>
    <string name="ok_button">Of course</string>

    <string name="menu_1">Settings</string>
    <string name="menu_2">Invite new user</string>
    <string name="menu_3">Show hidden chatiks</string>
    <string name="menu_33">Hide hidden chatiks</string>
    <string name="menu_4">Find user</string>
    <string name="menu_5">Find chatik</string>
    <string name="menu_6">Help</string>
    <string name="menu_7">Log out</string>

    <string name="chat_menu_search">Search profile</string>
    <string name="chat_menu_hide">Hide chat</string>
    <string name="chat_menu_show">Show chat</string>
    <string name="chat_menu_delete">Delete chat</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_list">list</string>
    <string name="title_activity_listtest">Listtest</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_buffer">Buffer</string>
</resources>
