<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/register_welcome"
            android:textAppearance="?android:textAppearanceMedium"
            android:gravity="center"/>

        <TextView
            android:id="@+id/user_text"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/register"
            android:layout_marginTop="55dp"
            android:layout_marginLeft="10dp"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_user"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/user_text"
            android:layout_marginLeft="50dp"
            android:layout_toRightOf="@+id/user_text"
            android:hint="Enter login" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/user_text"
            android:layout_below="@+id/user_text"
            android:layout_marginTop="40dp"
            android:text="@string/password"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/password_text"
            android:layout_alignLeft="@+id/edit_user"
            android:layout_alignRight="@+id/edit_user"
            android:hint="Enter your password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/user_text"
            android:layout_below="@+id/user_text"
            android:layout_marginTop="95dp"
            android:text="Confirm\npassword"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/edit_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/confirm"
            android:layout_alignLeft="@+id/edit_user"
            android:layout_alignRight="@+id/edit_user"
            android:hint="Confirm password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/reg_pin_text"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignLeft="@+id/confirm"
            android:layout_below="@+id/confirm"
            android:layout_marginTop="30dp"
            android:text="Enter code"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/reg_pin_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/reg_pin_text"
            android:layout_alignLeft="@+id/edit_confirm"
            android:layout_alignRight="@+id/edit_confirm"
            android:hint="One hell of a unique code"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="200dp"
            android:onClick="mainList"
            android:text="@string/register_butt" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>